# automation-project

./: .gitignore  CMakeLists.txt  README.md  dashboard-demo.pro  qml.qrc
assets/models/: README.md
qml/: main.qml
src/: DashboardGlItem.cpp  DashboardGlItem.h  VehicleIconItem.cpp  VehicleIconItem.h  main.cpp
